K8s-deployment/Charts/auth-server/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-auth-server
  namespace: aaa
  labels:
    app.kubernetes.io/name: authServer
    app.kubernetes.io/instance: redirect-auth-server
    app.kubernetes.io/component: ingress

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/global-rate-limit: "1000"
    nginx.ingress.kubernetes.io/global-rate-limit-key: $server_name
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1s
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-connections: "150"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/permanent-redirect: https://cos.iudx.org.in$request_uri
spec:
  rules:
    - host: authorization.iudx.org.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: aaa-api-server
                port:
                  name: http
  tls:
    - hosts:
      - authorization.iudx.org.in
      secretName: redirect-aaa-tls-secret
